--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ Teste2NovoSistemaDeLogin\LoginService\target
 
 # IDEs #
 ###################
+/**/target
 /**/generated
 /**/.settings
 /**/.project
