--- a/Teste2NovoSistemaDeLogin/LoginService/pom.xml
+++ b/Teste2NovoSistemaDeLogin/LoginService/pom.xml
@@ -50,7 +50,23 @@
 		    <groupId>org.springframework.batch</groupId>
 		    <artifactId>spring-batch-core</artifactId>
 		    <version>2.2.1.RELEASE</version>
-		</dependency>        
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter</artifactId>
+		    <exclusions>
+		        <exclusion>
+		            <groupId>org.springframework.boot</groupId>
+		            <artifactId>spring-boot-starter-logging</artifactId>
+		        </exclusion>
+		    </exclusions>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-log4j2</artifactId>
+		</dependency>
         
         <!-- Webjars for JQuery and Bootstrap -->
         <dependency>
