--- a/Teste2NovoSistemaDeLogin/LoginService/pom.xml
+++ b/Teste2NovoSistemaDeLogin/LoginService/pom.xml
@@ -19,12 +19,6 @@
         <version>1.5.3.RELEASE</version>
         <relativePath />
 	</parent>
-	
-	<dependencyManagement>
-		<dependencies>
-			
-		</dependencies>
-	</dependencyManagement>
   
 	<dependencies>
 		<!-- Spring Boot -->
@@ -45,12 +39,6 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
             <version>1.5.3.RELEASE</version>
         </dependency>
-        
-        <dependency>
-		    <groupId>org.springframework.batch</groupId>
-		    <artifactId>spring-batch-core</artifactId>
-		    <version>2.2.1.RELEASE</version>
-		</dependency>
 		
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
@@ -66,6 +54,20 @@
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-log4j2</artifactId>
+		</dependency>
+		
+		<!-- Spring -->
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>4.3.1.RELEASE</version>
+		</dependency>
+	
+		<dependency>
+		    <groupId>org.springframework.batch</groupId>
+		    <artifactId>spring-batch-core</artifactId>
+		    <version>2.2.1.RELEASE</version>
 		</dependency>
         
         <!-- Webjars for JQuery and Bootstrap -->
