--- a/Teste2NovoSistemaDeLogin/LoginService/pom.xml
+++ b/Teste2NovoSistemaDeLogin/LoginService/pom.xml
@@ -56,6 +56,12 @@
 		    <artifactId>spring-boot-starter-log4j2</artifactId>
 		</dependency>
 		
+<!-- 		<dependency> -->
+<!-- 		   <groupId>org.springframework.boot</groupId> -->
+<!-- 		   <artifactId>spring-boot-starter-tomcat</artifactId> -->
+<!-- 		   <scope>provided</scope> -->
+<!-- 		</dependency> -->
+		
 		<!-- Spring -->
 		
 		<dependency>
@@ -69,6 +75,18 @@
 		    <artifactId>spring-batch-core</artifactId>
 		    <version>2.2.1.RELEASE</version>
 		</dependency>
+		
+		<!-- embed-server -->
+<!--         <dependency> -->
+<!--     		<groupId>org.apache.tomcat.embed</groupId> -->
+<!--     		<artifactId>tomcat-embed-jasper</artifactId> -->
+<!--     		<scope>provided</scope> -->
+<!-- 		</dependency> -->
+		
+<!-- 		<dependency> -->
+<!-- 		    <groupId>javax.servlet</groupId> -->
+<!-- 		    <artifactId>jstl</artifactId> -->
+<!-- 		</dependency> -->
         
         <!-- Webjars for JQuery and Bootstrap -->
         <dependency>
@@ -90,11 +108,11 @@
         </dependency>
 		
 		<!-- Utils -->
-<!-- 		<dependency> -->
-<!--             <groupId>org.slf4j</groupId> -->
-<!--             <artifactId>slf4j-log4j12</artifactId> -->
-<!--             <version>1.7.22</version> -->
-<!--         </dependency> -->
+		<dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.22</version>
+        </dependency>
         
 		<dependency>
 			<groupId>junit</groupId>
@@ -105,11 +123,35 @@
 	</dependencies>
 	
 	<build>
+<!-- 		<resources> -->
+<!--         	<resource> -->
+<!-- 	            <directory>${basedir}/src/main/webapp</directory> -->
+<!-- 	            <includes> -->
+<!-- 	                <include>**/**</include> -->
+<!-- 	            </includes> -->
+<!-- 	        </resource> -->
+	        
+<!-- 	        <resource> -->
+<!-- 	            <directory>${basedir}/src/main/resources</directory> -->
+<!-- 	            <includes> -->
+<!-- 	                <include>**/**</include> -->
+<!-- 	            </includes> -->
+<!-- 	        </resource> -->
+<!-- 	    </resources> -->
+	    
 		<plugins>
 		   <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            
+<!--             <plugin> -->
+<!--                 <groupId>org.apache.maven.plugins</groupId> -->
+<!--                 <artifactId>maven-surefire-plugin</artifactId> -->
+<!--                 <configuration> -->
+<!--                     <useSystemClassLoader>true</useSystemClassLoader> -->
+<!--                 </configuration> -->
+<!--             </plugin> -->
             
 <!-- 			<plugin> -->
 <!--             	<groupId>org.apache.maven.plugins</groupId> -->
